--- a/applications/pr2_interactive_manipulation_frontend/src/interactive_manipulation.ui
+++ b/applications/pr2_interactive_manipulation_frontend/src/interactive_manipulation.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>323</width>
+    <width>326</width>
     <height>171</height>
    </rect>
   </property>
@@ -408,6 +408,29 @@
      <property name="margin">
       <number>5</number>
      </property>
+     <item>
+      <widget class="QLabel" name="label_2">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Bat: </string>
+       </property>
+       <property name="textFormat">
+        <enum>Qt::AutoText</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="power_label_">
+       <property name="text">
+        <string>100%</string>
+       </property>
+      </widget>
+     </item>
      <item>
       <widget class="QLabel" name="label">
        <property name="font">
